TT#9350 Ngcp-csc fix unified inbox cutoff bug
In Calls/Unified Inbox module, when I am viewing it from my laptop, the
right border is "cut off". After experimenting with @media rules, and
discovering that it could not be fixed with a max-width rule, I fixed
this by simply adding a small margin-right.

--- a/classic/sass/src/view/core/GridCards.scss
+++ b/classic/sass/src/view/core/GridCards.scss
@@ -8,6 +8,7 @@
         border: 1px solid lightgray;
         margin-bottom: 3px;
         border-radius: 5px;
+        margin-right: 11px;
     }
 
     .x-grid-td {
